# QtProjectStudio

./: .gitignore  CMakeLists.txt  README.md
Devices/: CMakeLists.txt
Devices/IMU/: CMakeLists.txt  readme.md
Devices/IMU/example/: CMakeLists.txt  main.cpp
Devices/IMU/src/: device_imu.cpp
Devices/SerialPort/: .gitignore  CMakeLists.txt
Devices/SerialPort/example/: CMakeLists.txt  main.cpp
Devices/SerialPort/include/seriallib/: serialport.h  serialport_global.h
Devices/SerialPort/src/: serialport.cpp
client/: CMakeLists.txt
client/src/: main.cpp
docs/: dev.md
include/: CMakeLists.txt  common.h
include/serialport/: device.h  serialport.h
include/serialport/IMU/: device_imu.h
mylib/: CMakeLists.txt
mylib/example/: main.cpp
mylib/include/mylib/: mylib.h
mylib/src/: mylib.cpp
sdk/: CMakeLists.txt
sdk/include/: mysdk.h
sdk/src/: mysdk.cpp
server/: CMakeLists.txt
server/src/: main.cpp
